--- a/miniprogram/pages/notice/notice.wxss
+++ b/miniprogram/pages/notice/notice.wxss
@@ -2,28 +2,22 @@
 
 .container {
   height: 100%;
-  width: 100%;
-  padding: 20rpx;
-  font-weight: bold;
+  width: 90%;
+  margin: 20rpx auto;
+  border: 1px solid green;
+  background-color: rgb(112, 173, 112);
 }
 
-.checkCell {
-  height: 100rpx;
-  width: 100%;
-  margin: 10rpx 0 0 10rpx;
-  /* border-bottom: tan 1px solid; */
+.card {
+  width: 600rpx;
+  height: 200rpx;
+  background-color: hotpink;
+  margin: 30rpx auto;
 }
 
-/* 删除按钮 */
-.deleteBtn {
-  /* border: gray 1px solid; */
-  padding: 10 10rpx;
-  color: red
-}
-
-/* 删除线 */
-.deleteLine {
-  text-decoration: line-through;
-  font-weight: bolder;
-  /* font-size: larger; */
+.card .left {
+  float: left;
+  height: 100%;
+  width: 250rpx;
+  background-color: blueviolet;
 }
