--- a/miniprogram/pages/notice/notice.wxss
+++ b/miniprogram/pages/notice/notice.wxss
@@ -4,20 +4,41 @@
   height: 100%;
   width: 90%;
   margin: 20rpx auto;
-  border: 1px solid green;
-  background-color: rgb(112, 173, 112);
+  /* border: 1px solid green; */
+  /* background-color: rgb(112, 173, 112); */
 }
 
 .card {
   width: 600rpx;
   height: 200rpx;
-  background-color: hotpink;
+  background-color: white;
   margin: 30rpx auto;
+  border: 1px solid gray;
+  border-radius: 40rpx 40rpx;
+  box-shadow: rgba(70, 69, 68, 0.712) 10rpx 10rpx;
 }
 
-.card .left {
+.left {
   float: left;
   height: 100%;
   width: 250rpx;
-  background-color: blueviolet;
+  /* padding: 0, auto; */
+  /* background-color: blueviolet; */
+}
+
+.card .left .circle {
+  margin-left: 20rpx;
+  font-size: 32rpx;
+}
+
+.card .right {
+  height: 100%;
+  /* display: flex; */
+  /* flex-flow: column; */
+}
+
+.right .top {
+  height: 90rpx;
+  line-height: 90rpx;
+  /* flex: 1; */
 }
