--- a/miniprogram/pages/diaryGroup/allDiary/allDiary.wxml
+++ b/miniprogram/pages/diaryGroup/allDiary/allDiary.wxml
@@ -8,10 +8,9 @@
       <van-dropdown-item title="管理" id="item">
         <van-cell title="新建" bind:click="handleNew">
         </van-cell>
-        <van-cell title="{{deleteFlag==true?'取消':'删除'}}" bind:click="handleDelete">
+        <van-cell title="{{deleteFlag==true?'取消':'删除(不可撤回!)'}}" bind:click="handleDelete">
         </van-cell>
       </van-dropdown-item>
-
     </van-dropdown-menu>
   </van-nav-bar>
 
@@ -21,17 +20,18 @@
   </view>
   <!-- 显示日志本 -->
   <view class="diary" wx:else>
-    <block wx:for="{{diaryList}}" wx:key="id">
-      <van-card desc="{{item.digest}}" title="{{item.title}}" center
+    <block wx:for="{{diaryList.list}}" wx:key="id">
+      <van-card desc="{{item.digest}}" title="{{item.title}}" center title-class="vanTitle" desc-class="vanDesc"
+        custom-class="vanCard" catch:tap="handleClickCard" data-diaryid="{{item.id}}"
         thumb="cloud://clound-5gtvltq351d31b48.636c-clound-5gtvltq351d31b48-1304986325/pageIcon/diaryGroupIcon.png">
         <view slot="footer">
           <text>{{item.date}} </text>
-          <van-button size="mini" type="danger" wx:if="{{deleteFlag}}" bind:click="deleteBtn" data-itemid="{{item.id}}">
-            删除
+          <van-button size="mini" type="danger" wx:if="{{deleteFlag}}" catch:tap="deleteBtn" data-itemid="{{item.id}}">
+            删除 
           </van-button>
         </view>
         <view slot="price">
-          <text>{{item.company}}</text>
+          <text class="company">公司/岗位：{{item.company}}</text>
         </view>
       </van-card>
       <!-- <view wx:if="{{deleteFlag}}">
