--- a/miniprogram/pages/group/group.wxss
+++ b/miniprogram/pages/group/group.wxss
@@ -1,1 +1,30 @@
 /* pages/group/group.wxss */
+.main {
+  background-color: black;
+  padding-bottom: 50rpx;
+}
+
+.itemRoot {
+  margin: 0 25rpx;
+  margin-bottom: 50rpx;
+  border: gray 1px solid;
+  /* border-radius: 20%; */
+  padding: 10rpx;
+  background-color: rgba(226, 219, 219, 0.973);
+  /* box-shadow: gray 5rpx 5rpx; */
+}
+
+.imgRoot {
+  margin-left: 40rpx;
+}
+
+.imgList {
+  display: inline-block;
+}
+
+.img {
+  margin: 5rpx;
+  position: relative;
+  width: 155rpx;
+  height: 155rpx;
+}
