--- a/miniprogram/pages/my/my.wxss
+++ b/miniprogram/pages/my/my.wxss
@@ -12,7 +12,7 @@
 .username-wrap {
   background-color: #f2f2f2 !important;
   border-width: 0px !important;
-  
+
 }
 
 .username-wrap::after {
@@ -21,4 +21,23 @@
 
 .username {
   color: #aaa;
+}
+
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #aaa;
+}
+
+.userinfo-avatar {
+  overflow: hidden;
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.usermotto {
+  margin-top: 200px;
 }
